Stop hiding finder / decreased left spacing

--- a/web/viewer.css
+++ b/web/viewer.css
@@ -386,7 +386,7 @@ html[dir='rtl'] #toolbarContainer, .findbar, .secondaryToolbar {
 }
 
 html[dir='ltr'] .findbar {
-  left: 68px;
+  left: 30px;
 }
 
 html[dir='rtl'] .findbar {
